--- a/index.html
+++ b/index.html
@@ -3,16 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <title>roy00227-site</title>
+  <link rel="stylesheet" href="style.css">
+  <script defer src="js/load-common.js"></script>
 </head>
-<body>
-  <h1>roy00227-site</h1>
+<body onload="loadCommonParts()">
+  <div id="header"></div>
 
-  <h2>旧サイト</h2>
-  <p>
-    roy00227のUnreal Engineに関するサイトはこちら：<br>
-    <a href="https://sites.google.com/view/roy00227unrealengine/home" target="_blank" rel="noopener noreferrer">
-      https://sites.google.com/view/roy00227unrealengine/home
-    </a>
-  </p>
+  <main class="container">
+    <h2>旧サイト</h2>
+    <p>
+      Unreal Engine に関する旧サイトはこちら：<br>
+      <a href="https://sites.google.com/view/roy00227unrealengine/home" target="_blank" rel="noopener noreferrer">
+        https://sites.google.com/view/roy00227unrealengine/home
+      </a>
+    </p>
+  </main>
+
+  <div id="footer"></div>
 </body>
 </html>
