--- a/base.html
+++ b/base.html
@@ -5,6 +5,11 @@
   <title>{% block title %}roy00227-site{% endblock %}</title>
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link rel="manifest" href="static/site.webmanifest">
+<link rel="icon" href="static/favicon.ico">
+<link rel="apple-touch-icon" href="static/android-chrome-192x192.png">
+
 </head>
 <body>
   <header>
