--- a/base.html
+++ b/base.html
@@ -9,7 +9,7 @@
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="shortcut icon" href="favicon.ico">
 <link rel="apple-touch-icon" href="android-chrome-192x192.png">
-<link rel="manifest" href="site.webmanifest">
+<link rel="manifest" href="manifest.json">
 
 </head>
 <body>
