--- a/base.html
+++ b/base.html
@@ -6,10 +6,10 @@
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="shortcut icon" href="favicon.ico">
-<link rel="apple-touch-icon" href="android-chrome-192x192.png">
-<link rel="manifest" href="manifest.json">
+<link rel="icon" type="image/x-icon" href="/favicon.ico">
+<link rel="shortcut icon" href="/favicon.ico">
+<link rel="apple-touch-icon" href="/android-chrome-192x192.png">
+<link rel="manifest" href="/manifest.json">
 
 </head>
 <body>
