--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h2>リンク</h2>
     <p>
       <a href="https://twitter.com/roy002271" target="_blank" rel="noopener noreferrer">
-        X（旧Twitter>
+        X（旧Twitter)
       </a><br>
       <a href="http://youtube.com/@roy00227games" target="_blank" rel="noopener noreferrer">
         YouTubeChannel
