--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
       </a><br>
     </p>
 
+    <h1>プロダクト一覧</h1>
+    <section>
+      <h2>ゲーム</h2>
+      <ul>
+        <li><a href="https://store.steampowered.com/app/1921040/Wizard_of_Hunting_Life/" target="_blank" rel="noopener noreferrer">Wizard of Hunting Life</a><br>
+          Wizard of Hunting LifeはアクションRPGゲームです。 狩りをしてレベルを上げ、お金を稼いで装備を買い、より強い敵に挑んでください。
+        </li>
+      </ul>
+    </section>
+
     <h1>旧サイト</h1>
     <p>
       旧サイトはこちら：<br>
