--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
     <h1>プロダクト一覧</h1>
     <section>
       <h2>ゲーム</h2>
-      <ul>
-        <li><a href="https://store.steampowered.com/app/1921040/Wizard_of_Hunting_Life/" target="_blank" rel="noopener noreferrer">Wizard of Hunting Life</a><br>
+        <div class="product">
+          <img src="images/game-x.png" alt="Wizard of Hunting Life">
+          <div class="product-info">
+            <a href="https://store.steampowered.com/app/1921040/Wizard_of_Hunting_Life/" target="_blank" rel="noopener noreferrer">Wizard of Hunting Life</a><br>
           Wizard of Hunting LifeはアクションRPGゲームです。 狩りをしてレベルを上げ、お金を稼いで装備を買い、より強い敵に挑んでください。
-        </li>
-      </ul>
+          </div>
+        </div>
     </section>
 
     <h1>旧サイト</h1>
