--- a/index.html
+++ b/index.html
@@ -30,23 +30,25 @@
         <div class="product">
           <img src="image\product\wizard-of-hunting-life/main.png" alt="Wizard of Hunting Life">
           <div class="product-info">
-            <h3>Wizard of Hunting Life</h3>
-              <a href="https://store.steampowered.com/app/1921040/Wizard_of_Hunting_Life/" target="_blank" rel="noopener noreferrer">Steam</a><br>
-              Wizard of Hunting LifeはアクションRPGゲームです。 狩りをしてレベルを上げ、お金を稼いで装備を買い、より強い敵に挑んでください。
+            <h3>Wizard of Hunting Life</h3>              
+              Wizard of Hunting LifeはアクションRPGゲームです。 狩りをしてレベルを上げ、お金を稼いで装備を買い、より強い敵に挑んでください。<br>
+              <a href="https://store.steampowered.com/app/1921040/Wizard_of_Hunting_Life/" target="_blank" rel="noopener noreferrer">Steam</a>
           </div>
         </div>
     </section>
 
-    <section>
-      <h2>UnrealEngineプラグイン</h2>
-        <div class="product">
-          <img src="image\product\wizard-of-hunting-life/main.png" alt="Loading Screen With Load Percentage">
-          <div class="product-info">
-            <a href="https://www.unrealengine.com/marketplace/product/loading-screen-with-load-percentage" target="_blank" rel="noopener noreferrer">Loading Screen With Load Percentage Life</a><br>
-            UMGをスレートウィジェットに変換してロード画面を表示し、プログレスバーとテキストでロードの割合を表示するプラグインです。
+  <section>
+        <h2>UnrealEngineプラグイン</h2>
+          <div class="product">
+            <img src="image\product\loading-screen-with-load-percentage/500x500.png" alt="Loading Screen With Load Percentage">
+            <div class="product-info">
+              <h3>Loading Screen With Load Percentage</h3>              
+                UMGをスレートウィジェットに変換してロード画面を表示し、プログレスバーとテキストでロードの割合を表示するプラグインです。<br>
+                <a href="https://www.unrealengine.com/marketplace/product/loading-screen-with-load-percentage" target="_blank" rel="noopener noreferrer">Marketplace</a><br>
+                <a href="https://sites.google.com/view/roy00227unrealengine/home/document_ueplugin_loadingscreenwithloadpercentage" target="_blank" rel="noopener noreferrer">Document</a><br>
+            </div>
           </div>
-        </div>
-    </section>
+      </section>
 
     <h1>旧サイト</h1>
     <p>
