--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <h3>Loading Screen With Load Percentage</h3>              
                 UMGをスレートウィジェットに変換してロード画面を表示し、プログレスバーとテキストでロードの割合を表示するプラグインです。<br>
                 <a href="https://www.unrealengine.com/marketplace/product/loading-screen-with-load-percentage" target="_blank" rel="noopener noreferrer">Marketplace</a><br>
-                <a href="https://sites.google.com/view/roy00227unrealengine/home/document_ueplugin_loadingscreenwithloadpercentage" target="_blank" rel="noopener noreferrer">Document</a><br>
+                <a href="https://sites.google.com/view/roy00227unrealengine/home/document_ueplugin_loadingscreenwithloadpercentage" target="_blank" rel="noopener noreferrer">Document(旧サイト)</a><br>
             </div>
           </div>
       </section>
