--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body onload="loadCommonParts()">
   <div id="header"></div>
 
-  <main class="container">
+  <main class="narrowContainer">
 
     <h1>リンク</h1>
     <p>
