--- a/document/loading-screen-with-load-percentage/index.html
+++ b/document/loading-screen-with-load-percentage/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>roy00227-site</title>
-  <link rel="stylesheet" href="../../style.css">  
-  <script defer src="../../js/load-common.js"></script>
+  <link rel="stylesheet" href="/style.css">  
+  <script defer src="/js/load-common.js"></script>
 </head>
 <body onload="loadCommonParts()">
   <div id="header"></div>
