--- a/document/loading-screen-with-load-percentage/index.html
+++ b/document/loading-screen-with-load-percentage/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>roy00227-site</title>
   <!-- 正しい例：document配下のページからルートのファイルを参照する -->
-  <link rel="stylesheet" href="../../style.css">
-  <script defer src="../../js/load-common.js"></script>
+  <link rel="stylesheet" href="/style.css">
+  <script defer src="/js/load-common.js"></script>
 </head>
 <body onload="loadCommonParts()">
   <div id="header"></div>
