--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>roy00227-site</title>
-  <link rel="stylesheet" href="style.css">
-  <script defer src="js/load-common.js"></script>
+  <link rel="stylesheet" href="/style.css">
+  <script defer src="/js/load-common.js"></script>
+  <script defer>
+    document.addEventListener("DOMContentLoaded", () => {
+      if (typeof loadCommonParts === "function") {
+        loadCommonParts();
+      }
+    });
+  </script>
 </head>
-<body onload="loadCommonParts()">
+<body>
+
   <div id="header"></div>
 
   <main class="narrowContainer">
