--- a/document/loading-screen-with-load-percentage/index.html
+++ b/document/loading-screen-with-load-percentage/index.html
@@ -17,21 +17,16 @@
   <div id="header"></div>
 
   <main class="container">
-    <h1>Document-LoadingScreenWithLoadPercentage</h1>
-      <a href="https://www.fab.com/ja/listings/179be80a-b024-4442-ae08-c0ddf90d3ac3" target="_blank" rel="noopener noreferrer">
-        Fab
-      </a><br>
-      This is a plugin that converts UMG into a slate widget, displays a loading screen, and displays the loading percentage with a progress bar and text.<br><br>
+    <center>
+      <h1>Document-LoadingScreenWithLoadPercentage</h1>
+        <a href="https://www.fab.com/ja/listings/179be80a-b024-4442-ae08-c0ddf90d3ac3" target="_blank" rel="noopener noreferrer">
+          Fab-9.99$
+        </a><br>
+        This is a plugin that converts UMG into a slate widget, displays a loading screen, and displays the loading percentage with a progress bar and text.
+      </center><br>
 
     <div class="image-container">        
-      <iframe class="media" width="400" height="225"
-        src="https://www.youtube.com/embed/PbietvmW3VI"
-        title="Unreal Engine Plugin Demo"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin"
-        allowfullscreen>
-      </iframe>      
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/PbietvmW3VI?si=iJ6ff_ZxkWeI0zSz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       <div class="text">
         Demo Video<br>
       </div>
@@ -39,7 +34,7 @@
     <br>
 
     <div class="image-container">        
-      <iframe width="402" height="273" src="https://www.youtube.com/embed/jiK6FFqifMg" title="Unreal Engine Plugin_How to use  &quot;Loading Screen With Load Percentage&quot;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> 
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/jiK6FFqifMg" title="Unreal Engine Plugin_How to use  &quot;Loading Screen With Load Percentage&quot;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> 
       <div class="text">
         This is a video on how to use it.
       </div>
