--- a/document/loading-screen-with-load-percentage/index.html
+++ b/document/loading-screen-with-load-percentage/index.html
@@ -19,16 +19,17 @@
   <main class="container">
     <center>
       <h1>Document-LoadingScreenWithLoadPercentage</h1>
-        <a href="https://www.fab.com/ja/listings/179be80a-b024-4442-ae08-c0ddf90d3ac3" target="_blank" rel="noopener noreferrer">
-          Fab-9.99$
-        </a><br>
-        This is a plugin that converts UMG into a slate widget, displays a loading screen, and displays the loading percentage with a progress bar and text.
-      </center><br>
+    </center>
+
 
     <div class="image-container">        
       <iframe width="560" height="315" src="https://www.youtube.com/embed/PbietvmW3VI?si=iJ6ff_ZxkWeI0zSz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       <div class="text">
-        Demo Video<br>
+        <a href="https://www.fab.com/ja/listings/179be80a-b024-4442-ae08-c0ddf90d3ac3" target="_blank" rel="noopener noreferrer">
+          Fab-9.99$
+        </a><br>
+        This is a plugin that converts UMG into a slate widget, displays a loading screen, and displays the loading percentage with a progress bar and text.
+      <br><br>
       </div>
     </div>
     <br>
