--- a/index.html
+++ b/index.html
@@ -57,11 +57,8 @@
                 <a href="https://www.fab.com/ja/listings/179be80a-b024-4442-ae08-c0ddf90d3ac3" target="_blank" rel="noopener noreferrer">
                   Fab
                 </a><br>
-                <a href="https://sites.google.com/view/roy00227unrealengine/home/document_ueplugin_loadingscreenwithloadpercentage" target="_blank" rel="noopener noreferrer">
-                  Document(旧サイト)
-                </a><br>
                 <a href="https://roy00227.github.io/document/loading-screen-with-load-percentage/index.html" target="_blank" rel="noopener noreferrer">
-                  Document(新しく作っているもの)
+                  Document
                 </a><br>
                 UMGをスレートウィジェットに変換してロード画面を表示し、プログレスバーとテキストでロードの割合を表示するプラグインです。<br>
             </div>
