--- a/header.html
+++ b/header.html
@@ -1,3 +1,4 @@
 <header>
     <h1>roy00227-site</h1>
+    <meta name="google-site-verification" content="9OHJeUjVdpN5y1aJLTYRQxEwg0AsJx6BZiA_SR8JL8w" />
 </header>
