--- a/base.html
+++ b/base.html
@@ -11,6 +11,8 @@
 <link rel="apple-touch-icon" href="/android-chrome-192x192.png">
 <link rel="manifest" href="/manifest.json">
 
+  <meta name="google-site-verification" content="9OHJeUjVdpN5y1aJLTYRQxEwg0AsJx6BZiA_SR8JL8w" />
+
 </head>
 <body>
   <header>
