--- a/header.html
+++ b/header.html
@@ -1,8 +1,8 @@
 <header>
     <h1>roy00227-site</h1>
-<link rel="icon" type="image/x-icon" href="/favicon.ico">
-<link rel="shortcut icon" href="/favicon.ico">
-<link rel="apple-touch-icon" href="/android-chrome-192x192.png">
-<link rel="manifest" href="/manifest.json">
+<link rel="icon" type="image/x-icon" href="icon/favicon.ico">
+<link rel="shortcut icon" href="icon/favicon.ico">
+<link rel="apple-touch-icon" href="icon/android-chrome-192x192.png">
+<link rel="manifest" href="icon/manifest.json">
 
 </header>
