document ver1.26 add

--- a/document/loading-screen-with-load-percentage/index.html
+++ b/document/loading-screen-with-load-percentage/index.html
@@ -476,7 +476,16 @@
                 </div>
               </div>
 
-
+            <br><h2>11.Update_2025/07/19_ver1.26 ZOrder</h2>
+              <div class="image-container">
+                <img src="image/11-ver1.26-zorder.png" alt="10update1.png">
+                <div class="text">
+                  ZOrder set and get is now available.
+                  <p>
+                    *The test results show that the ZOrder of the slate widget is -10 compared to UMG. When displaying the load screen, we internally add 10 to the ZOrder to make it feel the same as UMG.
+                  </p>                
+                </div>
+              </div>
               
   </main>
 
