--- a/document/loading-screen-with-load-percentage/index.html
+++ b/document/loading-screen-with-load-percentage/index.html
@@ -480,7 +480,8 @@
               <div class="image-container">
                 <img src="image/11-ver1.26-zorder.png" alt="10update1.png">
                 <div class="text">
-                  ZOrder set and get is now available.
+                  <div>ZOrder set and get is now available.</div>
+                  <div>Widgets with higher ZOrder values are brought to the front.</div>
                   <p>
                     *The test results show that the ZOrder of the slate widget is -10 compared to UMG. When displaying the load screen, we internally add 10 to the ZOrder to make it feel the same as UMG.
                   </p>                
