--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -49,7 +49,7 @@
 
     
     <h2>自己紹介</h2>    
-      <div class="image-container">
+      <div class="image-container-small">
         <img src="image/logo.png" alt="Activate the plugin1">
         <div class="text">
             <div>私はroy00227という名前でUEエンジニアとして活動しています。</div>
@@ -64,8 +64,8 @@
       </div>
 
     
-    <br><h2>Loading Screen With Load Percentage(UEプラグイン)</h2>  
-      <div class="image-container">
+    <h2>Loading Screen With Load Percentage(UEプラグイン)</h2>  
+      <div class="image-container-small">
         <img src="../image/product/loading-screen-with-load-percentage/main.png" alt="Loading Screen With Load Percentage">
         <div class="text">
             <div>
@@ -96,8 +96,8 @@
         </div>
       </div>
 
-    <br><h2>Wizard of Hunting Life(UE製ゲーム)</h2>   
-      <div class="image-container">
+    <h2>Wizard of Hunting Life(UE製ゲーム)</h2>   
+      <div class="image-container-small">
         <img src="../image/product/wizard-of-hunting-life/main.png" alt="Wizard of Hunting Life">
         <div class="text">
             <div>
