--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -80,7 +80,7 @@
                 </div>
               </p>
               <div>
-                音声・動画ファイルのアップロードから文字起こし、課金処理、結果表示まで一連の流れを実装。フロントエンドとバックエンドの連携も担当。
+                AIを活用して、音声・動画ファイルのアップロードからWhisperを使用しての文字起こし、Stripeでの課金処理、結果表示まで一連の流れを実装しました。フロントエンドとバックエンドの連携も担当しています。
               </div>
             </div>
           </div>
