--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -52,9 +52,9 @@
       <div class="image-container-small">
         <img src="image/logo.png" alt="Activate the plugin1">
         <div class="text">
-            <div>私はroy00227という名前でエンジニアとして活動しています。</div>
             <div>UnrealEngineでゲームやプラグインの開発と販売をしています。</div>
             <div>またWebサービスの構築・運用もしています。</div>
+            <div>Unityも多少使えます。</div>
 
             <div style="margin-top: 1em;">
                 <a href="http://tiny.cc/roy00227vitae" target="_blank" rel="noopener noreferrer">
