--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -70,7 +70,7 @@
               <img src="../image\product\WispScribe.png" alt="WispScribe">
           <div class="text">
               <div>
-                  Flaskを用いて構築し、2025年7月に公開した文字起こしのWebサービスです。
+                  Python (Flask)を用いて構築し、2025年7月に公開した文字起こしのWebサービスです。
               </div>
               <p>
                 <div>
