--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>roy00227-site</title>
-  <link rel="stylesheet" href="/style.css">
-  <script defer src="/js/load-common.js"></script>
+  <link rel="stylesheet" href="style.css">
+  <script defer src="js/load-common.js"></script>
   <script defer>
     document.addEventListener("DOMContentLoaded", () => {
       if (typeof loadCommonParts === "function") {
