--- a/document/loading-screen-with-load-percentage/index.html
+++ b/document/loading-screen-with-load-percentage/index.html
@@ -23,7 +23,7 @@
 
 
     <div class="image-container">        
-      <div class="video-responsive"><iframe src="https://www.youtube.com/embed/PbietvmW3VI?si=iJ6ff_ZxkWeI0zSz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/PbietvmW3VI?si=iJ6ff_ZxkWeI0zSz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       <div class="text">
         <div>
           <a href="https://www.fab.com/ja/listings/179be80a-b024-4442-ae08-c0ddf90d3ac3" target="_blank" rel="noopener noreferrer">
@@ -37,7 +37,7 @@
     
 
     <div class="image-container">        
-      <iframe  src="https://www.youtube.com/embed/jiK6FFqifMg" title="Unreal Engine Plugin_How to use  &quot;Loading Screen With Load Percentage&quot;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> 
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/jiK6FFqifMg" title="Unreal Engine Plugin_How to use  &quot;Loading Screen With Load Percentage&quot;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> 
       <div class="text">
         This is a video on how to use it.
       </div>
