--- a/memo/UE/index.html
+++ b/memo/UE/index.html
@@ -24,7 +24,7 @@
     <h2>2025</h2>
         
     <a href="2025/0811_VRNoneShadow/index.html" target="_blank" rel="noopener noreferrer">
-        2025/08/11_UE5.6問題：VRプレビューーで影が表示されない
+        2025/08/11_UE5.6問題：VRプレビューで影が表示されない
     </a>
 
               
