--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <a href="https://www.fab.com/ja/listings/179be80a-b024-4442-ae08-c0ddf90d3ac3" target="_blank" rel="noopener noreferrer">
                   Fab
                 </a><br>
-                <a href="document/loading-screen-with-load-percentage/index.html" rel="noopener noreferrer">
+                <a href="document/loading-screen-with-load-percentage/" rel="noopener noreferrer">
                   Document
                 </a><br>
                 UMGをスレートウィジェットに変換してロード画面を表示し、プログレスバーとテキストでロードの割合を表示するプラグインです。<br>
@@ -85,7 +85,7 @@
       
     <h1>メモ</h1>
     <p>
-      <a href="memo/UE/index.html" rel="noopener noreferrer">
+      <a href="memo/UE/" rel="noopener noreferrer">
         Unreal Engine
       </a>
     </p>
