--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       
     <h1>メモ</h1>
     <p>
-      <a href="memo/UE/">
+      <a href="memo/ue/">
         Unreal Engine
       </a>
     </p>
