--- a/memo/UE/index.html
+++ b/memo/UE/index.html
@@ -23,7 +23,7 @@
 
     <h2>2025</h2>
         
-    <a href="2025/0811_VRNoneShadow/">
+    <a href="2025/0811-vr-none-shadow/">
         2025/08/11_UE5.6問題：VRプレビューで影が表示されない
     </a>
 
