--- a/memo/UE/index.html
+++ b/memo/UE/index.html
@@ -18,13 +18,13 @@
 
   <main class="container">
     <center>
-      <h1>メモ_Unreal Engine</h1>
+      <h1>メモ-Unreal Engine</h1>
     </center>
 
     <h2>2025</h2>
         
     <a href="2025/0811-vr-none-shadow/">
-        2025/08/11_UE5.6問題：VRプレビューで影が表示されない
+        2025/08/11-UE5.6問題：VRプレビューで影が表示されない
     </a>
 
               
