--- a/memo/ue/index.html
+++ b/memo/ue/index.html
@@ -24,7 +24,7 @@
     <h2>2025</h2>
         
     <a href="2025/0811-vr-none-shadow/">
-        2025/08/11-UE5.6問題：VRプレビューで影が表示されない
+        2025/08/11-UE5.6-問題：VRプレビューで影が表示されない
     </a>
 
               
