--- a/document/loading-screen-with-load-percentage/index.html
+++ b/document/loading-screen-with-load-percentage/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>roy00227-site</title>
+  <title>roy00227-site - Document-LoadingScreenWithLoadPercentage</title>
   <link rel="stylesheet" href="../../style.css">
   <script defer src="../../js/load-common.js"></script>
   <script defer>
