--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
 <footer>
 
-    <div>&copy; 2025 roy00227 | <a href="/">トップページに戻る</a></div>
+    <p>&copy; 2025 roy00227 | <a href="/">トップページに戻る</a></p>
 
 </footer>
