--- a/header.html
+++ b/header.html
@@ -1,5 +1,5 @@
 <header>
-    <div class="site-title">roy00227-site</div>
+    <p class="site-title">roy00227-site</p>
     
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="shortcut icon" href="/favicon.ico">
