--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,6 +12,7 @@
       }
     });
   </script>
+  <link rel="canonical" href="https://roy00227.github.io/portfolio/">
 </head>
 <body>
   <div id="header"></div>
