--- a/document/loading-screen-with-load-percentage/index.html
+++ b/document/loading-screen-with-load-percentage/index.html
@@ -12,6 +12,7 @@
       }
     });
   </script>
+  <link rel="canonical" href="https://roy00227.github.io/document/loading-screen-with-load-percentage/">
 </head>
 <body>
   <div id="header"></div>
