--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       }
     });
   </script>
-  <link rel="canonical" href="https://roy00227.github.io">
+  <link rel="canonical" href="https://roy00227.github.io/">
 </head>
 <body>
 
