--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -133,7 +133,7 @@
                     </a> 
                 </div>
             </p>
-            <div>黒い砂漠やモンスターハンターを意識した作品ですが、うまくはいきませんでした。</div>
+            <div>Blueprintを使い、戦闘システム、装備システム、レベルアップシステム、クエストシステムなどを実装しました。</div>
         </div>
  
       
