--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
   </script>
   <link rel="canonical" href="https://roy00227.github.io/">
 </head>
-<body>
-  
+<body class="home">
+
+<div id="header"></div>
 <h1 class="site-title">roy00227-site</h1>
 
   <main class="narrowContainer">
