スタイル調整

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <main class="narrowContainer">
 
     <h2>リンク</h2>
-    <p>
+    <section>
       <a href="https://twitter.com/roy002271" target="_blank" rel="noopener noreferrer">
         X（旧Twitter)
       </a><br>
@@ -31,8 +31,8 @@
       </a><br>
       <a href="https://store.steampowered.com/curator/43084408" target="_blank" rel="noopener noreferrer">
         Steamストアページ
-      </a><br>
-    </p>
+      </a><br>    
+    </section>
 
     <h2>プロダクト一覧</h2>
     <section>
@@ -40,7 +40,7 @@
         <div class="product">
           <img src="image\product\wizard-of-hunting-life/main.png" alt="Wizard of Hunting Life">
           <div class="product-info">
-            <h3>Wizard of Hunting Life</h3>              
+            <h4>Wizard of Hunting Life</h4>              
               <a href="https://store.steampowered.com/app/1921040/Wizard_of_Hunting_Life/" target="_blank" rel="noopener noreferrer">
                 Steam
               </a>
@@ -55,7 +55,7 @@
           <div class="product">
             <img src="image\product\loading-screen-with-load-percentage/main.png" alt="Loading Screen With Load Percentage">
             <div class="product-info">
-              <h3>Loading Screen With Load Percentage</h3>
+              <h4>Loading Screen With Load Percentage</h4>
                 <a href="https://www.fab.com/ja/listings/179be80a-b024-4442-ae08-c0ddf90d3ac3" target="_blank" rel="noopener noreferrer">
                   Fab
                 </a><br>
@@ -72,7 +72,7 @@
           <div class="product">
             <img src="image\product\WispScribe.png" alt="WispScribe">
             <div class="product-info">
-              <h3>WispScribe</h3>
+              <h4>WispScribe</h4>
                 <div>
                   <a href="https://wispscribe.onrender.com/" target="_blank" rel="noopener noreferrer">
                     サイト                  
