マージン調整
マージン調整

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </a><br>    
     </section>
 
-    <h2>プロダクト一覧</h2>
+    <h2 style="margin-bottom: -20px;">プロダクト一覧</h2>
     <section>
       <h3>ゲーム</h3>
         <div class="product">
