--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     });
   </script>
   <link rel="canonical" href="https://roy00227.github.io/">
+
+  
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/android-chrome-192x192.png">
+    <link rel="manifest" href="/manifest.json">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
 </head>
 <body class="home">
 
