--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     });
   </script>
   <link rel="canonical" href="https://roy00227.github.io/">
-
+  <meta name=”description“ content=“roy00227の個人サイトです。UnrealEngineについてのメモなどを含んでいます。“ />
   
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="shortcut icon" href="/favicon.ico">
