--- a/memo/ue/index.html
+++ b/memo/ue/index.html
@@ -13,6 +13,8 @@
     });
   </script>
   <link rel="canonical" href="https://roy00227.github.io/memo/ue/">
+  
+  <meta name=”description“ content=“UnrealEngineについてのメモです。“ />
 
   
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
