--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <section>
         <h3>Webサービス</h3>
           <div class="product">
-            <img src="image\product\WispScribe.png" alt="WispScribe">
+            <img src="image\product\WispScribe.webp" alt="WispScribe">
             <div class="product-info">
               <h4>WispScribe</h4>
                 <div>
