<meta name="description" content="roy00227の個人サイトです。Unreal Engineに関する技術メモやゲーム開発のチュートリアルを公開しています。" />

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     });
   </script>
   <link rel="canonical" href="https://roy00227.github.io/">
-  <meta name=”description“ content=“roy00227の個人サイトです。UnrealEngineについてのメモなどを含んでいます。“ />
+  
+  <meta name="description" content="roy00227の個人サイトです。Unreal Engineに関する技術メモなどを公開しています。" />
   
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="shortcut icon" href="/favicon.ico">
