--- a/header.html
+++ b/header.html
@@ -1,4 +1,5 @@
 <header>
-    <p class="site-title">roy00227-site</p>  
-    
+    <p class="site-title">
+        roy00227-site
+    </p>
 </header>
