--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 <body class="home">
 
 <div id="header"></div>
-<h1 class="site-title">roy00227-site</h1>
+<h1 class="site-title">  
+  roy00227-site
+</h1>
 
   <main class="narrowContainer">
 
