--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
 <footer>
 
-    <p>&copy; 2025 roy00227 | <a href="/" style="color: white">トップページに戻る</a></p>
+    <div>&copy; 2025 roy00227 | <a href="/" style="color: white">トップページに戻る</a></div>
 
 </footer>
