--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -89,7 +89,7 @@
                 </div>
               </p>
               <div>
-                AIを活用して、音声・動画ファイルのアップロードからWhisperを使用しての文字起こし、Stripeでの課金処理、結果表示まで一連の流れを実装しました。フロントエンドとバックエンドの連携も担当しています。
+                AIを活用して、音声・動画ファイルのアップロードからWhisperを使用しての文字起こし、Stripeでの課金処理、結果表示まで一連の流れを実装しました。Renderでデプロイ・運用しており、フロントエンドとバックエンドの連携も担当しています。
               </div>
             </div>
           </div>
