HTML共通部分改造

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>roy00227-site</title>  
-  <meta name="description" content="roy00227の個人サイトです。Unreal Engineに関する技術メモなどを公開しています。" />
 
   <!-- 全html共通部分 -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/style.css">
   <script defer src="/js/load-common.js"></script>
   <script defer>
@@ -19,8 +18,11 @@
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/android-chrome-192x192.png">
   <link rel="manifest" href="/manifest.json">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+  <!-- 全html共通部分ここまで -->
+
+  <title>roy00227-site</title>  
+  <meta name="description" content="roy00227の個人サイトです。Unreal Engineに関する技術メモなどを公開しています。" />
+
 </head>
 <body class="home">
 
