職務経歴書・ポートフォリオ追加

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -89,7 +89,11 @@
                 </div>
               </p>
               <div>
-                AIを活用して、音声・動画ファイルのアップロードからWhisperを使用しての文字起こし、Stripeでの課金処理、結果表示まで一連の流れを実装しました。Renderでデプロイ・運用しており、フロントエンドとバックエンドの連携も担当しています。
+              <h3>詳細</h3>
+                GeminiとChatGPTを活用しながら、Whisper APIとStripeを用いた音声ファイルの文字起こし＋決済機能付きのWebサービスを個人開発。<br>
+                Python (Flask)を用いて構築し、音声・動画ファイルのアップロードから文字起こし、課金処理、結果表示まで一連の流れを実装。フロントエンドとバックエンドの連携も担当。<br>
+                またPageSpeed Insightsでのスコアの改善や、SEOツールseodoorを活用しSEOの最適化を実施。<br>
+
               </div>
             </div>
           </div>
@@ -113,7 +117,8 @@
                         ドキュメント
                     </a> 
                 </div>
-            </p>
+            </p>            
+            <h3>詳細</h3>
             <div>
                 このプラグインは基本的に、UMGをスレートウィジェットに変換し、ロードパーセントを取得して表示するためのものです。
             </div>
@@ -141,6 +146,8 @@
                     </a> 
                 </div>
             </p>
+            
+            <h3>詳細</h3>
             <div>Blueprintを使い、戦闘システム、装備システム、レベルアップシステム、クエストシステムなどを実装しました。</div>
         </div>
  
