--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -104,7 +104,7 @@
         <img src="../image/product/loading-screen-with-load-percentage/main.png" alt="Loading Screen With Load Percentage">
         <div class="text">
             <div>
-                UEプラグインの作成と販売(自主制作)
+                Unreal Engineプラグインの作成と販売(自主制作)
             </div>
             <p>
                 <div>
@@ -120,19 +120,19 @@
             </p>            
             <h3>詳細</h3>
             <div>
-              マーケットプレイスでUE5のプラグインであるLoading Screen With Load Percentageを発売。<br>
+              マーケットプレイスでUnreal Engine5のプラグインであるLoading Screen With Load Percentageを発売。<br>
               UMGをスレートウィジェットに変換してロード画面を表示し、プログレスバーとテキストでロードの割合を表示。
             </div>
             
         </div>
       </div>
 
-    <h2>Wizard of Hunting Life(UE製ゲーム)</h2>   
+    <h2>Wizard of Hunting Life(Unreal Engine4・5製ゲーム)</h2>   
       <div class="image-container-small">
         <img src="../image/product/wizard-of-hunting-life/main.png" alt="Wizard of Hunting Life">
         <div class="text">
             <div>
-                UE4・5を使いPCゲーム「Wizard of Hunting Life」開発・リリース（自主制作）
+                Unreal Engine4・5を使いPCゲーム「Wizard of Hunting Life」開発・リリース（自主制作）
             </div>
             <p>
                 <div>
