--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -145,7 +145,7 @@
             <h3>詳細</h3>
             <div>
               3Dモデルやエフェクトはマーケットプレイスで購入し、システムはYoutubeのチュートリアル動画などを見ながら、ブループリントを使い制作。<br>
-              ・戦闘、足音・エフェクト、敵AI、インベントリ、インタラクト、ダイアローグ、ショップ、クエスト、オプションシステムなど
+              ・戦闘、足音・エフェクト、敵AI、インベントリ、インタラクト、ダイアログ、ショップ、クエスト、オプションシステムなど
             </div>
         </div>
  
