--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -28,8 +28,11 @@
 
   <main class="container">
     
-      <h1>ポートフォリオ</h1>
+    <h1>ポートフォリオ</h1>
 
+    <div style="text-align: center;margin-bottom: 30px;">
+      最終更新日：2025/11/27
+    </div>
     
     <!-- 目次 -->
     <nav id="toc">
